--- a/index.html
+++ b/index.html
@@ -79,90 +79,17 @@
             margin-bottom: 1rem;
         }
 
+        /* Visitor Counter */
         .visitor-counter {
-            margin-top: 1rem;
-            font-size: 1.2rem;
-            color: #64ffda;
-        }
-
-        /* Chatbot Styles */
-        #chatbot-container {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
-            width: 250px;
-            background: #0a192f;
-            border: 2px solid #64ffda;
-            border-radius: 8px;
-            z-index: 1000;
-            display: flex;
-            flex-direction: column;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-        }
-
-        #chatbot-header {
-            background: #64ffda;
-            color: #0a192f;
-            padding: 8px;
-            font-weight: bold;
-            text-align: center;
-            border-radius: 8px 8px 0 0;
-        }
-
-        #chatbot-body {
-            padding: 8px;
-            height: 200px;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-        }
-
-        #chatbot-messages {
-            flex: 1;
-        }
-
-        .message {
-            margin-bottom: 8px;
-        }
-
-        .message.user {
-            text-align: right;
+            bottom: 10px;
+            left: 10px;
+            background: rgba(10, 25, 47, 0.9);
+            padding: 5px 10px;
+            border-radius: 5px;
             color: #64ffda;
-        }
-
-        .message.bot {
-            text-align: left;
-            color: #8892b0;
-        }
-
-        #chatbot-input {
-            display: flex;
-            padding: 5px;
-            border-top: 1px solid #64ffda;
-        }
-
-        #user-input {
-            flex: 1;
-            padding: 5px;
-            border: 1px solid #64ffda;
-            border-radius: 4px;
-            outline: none;
-            color: #fff;
-            background: #0a192f;
-        }
-
-        #send-button {
-            margin-left: 5px;
-            background: #64ffda;
-            color: #0a192f;
-            border: none;
-            padding: 5px 8px;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        #send-button:hover {
-            background: #52e5c7;
+            font-size: 1rem;
+            z-index: 1000;
         }
 
         /* Contact Form */
@@ -202,6 +129,36 @@
         #contact-form button:hover {
             background: #52e5c7;
         }
+
+        /* Social Media Links */
+        .social-links {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            z-index: 1000;
+        }
+
+        .social-links a {
+            text-decoration: none;
+            color: #64ffda;
+            font-size: 1.5rem;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: color 0.3s ease;
+        }
+
+        .social-links a:hover {
+            color: #52e5c7;
+        }
+
+        .social-links a img {
+            width: 24px;
+            height: 24px;
+        }
     </style>
 </head>
 <body>
@@ -223,21 +180,27 @@
         <section class="main-section">
             <h1>Hi, I'm <span style="color: #64ffda;">Tim Okito</span></h1>
             <p>Solutions Engineer | Problem Solver | Strategic Thinker</p>
-            <div class="visitor-counter">
-                Visitors: <span id="visitor-count">0</span>
-            </div>
         </section>
 
-        <!-- Chatbot -->
-        <div id="chatbot-container">
-            <div id="chatbot-header">AI Chatbot</div>
-            <div id="chatbot-body">
-                <div id="chatbot-messages"></div>
-                <div id="chatbot-input">
-                    <input type="text" id="user-input" placeholder="Type a message..." />
-                    <button id="send-button">Send</button>
-                </div>
-            </div>
+        <!-- Visitor Counter -->
+        <div class="visitor-counter">
+            Visitors: <span id="visitor-count">0</span>
+        </div>
+
+        <!-- Social Media Links -->
+        <div class="social-links">
+            <a href="https://github.com/ptokito" target="_blank">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v8/icons/github.svg" alt="GitHub Icon" />
+                GitHub
+            </a>
+            <a href="https://www.linkedin.com/in/timokito/" target="_blank">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v8/icons/linkedin.svg" alt="LinkedIn Icon" />
+                LinkedIn
+            </a>
+            <a href="https://timokito.medium.com/" target="_blank">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v8/icons/medium.svg" alt="Medium Icon" />
+                Medium
+            </a>
         </div>
 
         <!-- Contact Form -->
@@ -295,55 +258,6 @@
         visitorCount++;
         localStorage.setItem("visitorCount", visitorCount);
         visitorCountElement.textContent = visitorCount;
-
-        /* ChatGPT Integration */
-        const API_KEY = "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";
-
-        const sendMessage = async (message) => {
-            const response = await fetch("https://api.openai.com/v1/chat/completions", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "Authorization": `Bearer ${API_KEY}`
-                },
-                body: JSON.stringify({
-                    model: "gpt-3.5-turbo",
-                    messages: [{ role: "system", content: "You are a helpful assistant." }, { role: "user", content: message }]
-                })
-            });
-
-            const data = await response.json();
-            return data.choices[0].message.content;
-        };
-
-        const chatbotMessages = document.getElementById("chatbot-messages");
-        const userInput = document.getElementById("user-input");
-        const sendButton = document.getElementById("send-button");
-
-        const addMessage = (text, isUser = false) => {
-            const messageElement = document.createElement("div");
-            messageElement.classList.add("message", isUser ? "user" : "bot");
-            messageElement.innerText = text;
-            chatbotMessages.appendChild(messageElement);
-            chatbotMessages.scrollTop = chatbotMessages.scrollHeight;
-        };
-
-        sendButton.addEventListener("click", async () => {
-            const userMessage = userInput.value.trim();
-            if (!userMessage) return;
-
-            addMessage(userMessage, true);
-            userInput.value = "";
-
-            addMessage("Typing...", false);
-            const botMessages = document.querySelectorAll(".message.bot");
-            const typingIndicator = botMessages[botMessages.length - 1];
-
-            const botReply = await sendMessage(userMessage);
-            typingIndicator.remove();
-
-            addMessage(botReply, false);
-        });
 
         /* EmailJS Integration */
         emailjs.init('service_duwk21f'); // Initialize with your EmailJS service ID
